/*
    GSP for the TF blockchain game
    Copyright (C) 2020  Autonomous Worlds Ltd

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

syntax = "proto2";
option cc_enable_arenas = true;

import "proto/fighter_move_blueprint.proto";

package pxd.proto;

message ArmorPiece
{    
  /*Name of the candy used in armor piece creation*/
  optional string Candy = 1;    
  
  /*Enum armor type for this armor piece*/
  optional uint32 ArmorType = 2;

  /*Enum reward source, if came as tournament or activity reward*/
  optional uint32 RewardSource = 3;   

  /*Reward source database auto incremented unique ID*/
  optional uint32 RewardSourceID = 4;   
   
}
