/*
    GSP for the TF blockchain game
    Copyright (C) 2020  Autonomous Worlds Ltd

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

syntax = "proto2";
option cc_enable_arenas = true;

package pxd.proto;

message AuthoredArmor
{
  optional string candyType = 1;
    
  optional uint32 armorType = 2;
}

message CandyAmount
{
  optional string candyType = 1;
    
  optional uint64 amount = 2;
}

message CraftedRecipe
{
  /*id*/
  optional string AuthoredId = 1;
    
  /*an*/
  optional string AnimationId = 2;
  
  /*a*/
  repeated AuthoredArmor Armor = 3;
  
  /*n*/
  optional string Name = 4;  
  
  /*d*/
  optional uint32 Duration = 5;  
  
  /*fn*/
  optional string FighterName = 6;   
  
  /*f*/
  optional string FighterType = 7; 
  
  /*m*/
  repeated string Moves = 8; 
  
  /*q*/
  optional uint32 Quality = 9; 
  
  /*ab*/
  optional bool IsAccountBound = 10; 
  
  /*rc*/
  repeated CandyAmount RequiredCandy = 11; 
  
  /*r*/
  optional uint32 RequiredFighterQuality = 12; 
}
